# multirobot-pathplanning-benchmark

./: .gitignore  .gitmodules  bottle.g  config.yaml  configuration.py  dependency_graph.py  main.py  mobile-manipulator-restricted.g  planner.py  planner_base.py  planner_bi_rrtstar.py  planner_bi_rrtstar_parallelized.py  planner_q_rrtstar.py  planner_rrtstar.py  planner_rrtstar_bidirectional.py  planning_env.py  postprocessing.py  pyproject.toml  rai_config.py  rai_envs.py  readme.md  rrt_base.py  rrtstar_base.py  rrtstar_planner.py  run_plotting_for_folders.sh  run_seq_configs.sh  run_seq_configs_ablations.sh  test_notes.md  util.py  z.log.global
analysis/: analysis_util.py  check.py  postprocessing.py  shortcutting.py  simulations.py  visualizations.py  z.log.global
configs/: 2d_handover_benchmark.json  2d_handover_benchmark_informed_sampling.json  hallway_benchmark.json  hallway_benchmark_connection_strategy.json  hallway_benchmark_distance_metric.json  handover_benchmark_connection_strategy.json
configs/defaults/: aitstar.json  birrtstar.json  composite_prm.json  eitstar.json  prioritized.json  rh_eitstar.json  rrtstar.json  short_horizon.json
configs/demo/: box_stacking_dep.json  hallway.json  mobile_wall.json  mobile_wall_dep.json  other_hallway.json  simple_2d_sampling_based.json  test.json  test_0.json  test_1.json  test_2.json  unordered_box_reorientation.json
configs/experiments-giovanni/: arm_ee_pose.json  dual_stick.json  glasses.json  grasping.json  grasping_report.json  half_rfl.json  husky_bimanual.json  husky_report.json  rel_pose_shapes.json  rfl.json  rfl_report.json  single_stick.json
cpp/: CMakeLists.txt  main.cpp
examples/: analysis_util.py  compare_costs.py  compare_rai_vamp_coll_checking.py  compute_confidence_intervals.py  config.yaml  disp_path_2d.py  disp_wall_gap_path.py  display_path_evolution.py  display_single_path.py  main.py  main_numba.py  make_plots.py  make_table.py  make_timing_table.py  paper_2.mplstyle  plot_hyperparams.py  plot_scaling_test.py  run_all_envs.py  run_analysis.py  run_experiment.py  run_planner.py  run_postprocess.py  run_rrt_skills_benchmark.py  run_scaling_test.py  show_problems.py  test_hyperparams.py  tmp.py
problems/: rai_config.py  rai_envs.py
scripts/: compare_rai_vamp_coll_checking.py  disp_path_2d.py  run_all_envs.py  run_experiment.py  run_planner.py  run_scaling_test.py  show_problems.py  tmp.py
tests/: plot_bechmark_results.py  test.py  test_batch_config.py  test_batch_config_benchmark.py  test_config.py  test_constraints.py  test_contraints.py  test_envs.py  test_planners.py
ur10/: ur10.g  ur10_clean.g  ur10_vacuum.g
(+271 files in other folders)
